--- a/bot/package.json
+++ b/bot/package.json
@@ -13,12 +13,10 @@
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
     "firebase-admin": "^12.3.0",
+    "moment": "^2.30.1",
     "uuid": "^10.0.0"
   },
   "engines": {
     "node": ">=16"
-  },
-  "_moduleAliases": {
-    "@settings": "./settings"
   }
 }
